--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
                <h2 class="top-5__title title">Top 5 writing services
                   <span class="title--text-violet">reviews</span>
                </h2>
-               <div class="swiper">
+               <div class="swiper swiper-js-reviews">
                   <div class="swiper-wrapper">
                      <div class="swiper-slide">
                         <article class="top-5__card card">
@@ -381,7 +381,6 @@
                                     Writing Services
                                  </a>
                               </h3>
-                              <img src="images/violet-arrow.svg" alt="violet arrow">
                            </div>
                         </div>
                      </div>
@@ -396,7 +395,6 @@
                                     Writing Services
                                  </a>
                               </h3>
-                              <img src="images/violet-arrow.svg" alt="violet arrow">
                            </div>
                         </div>
                      </div>
@@ -452,13 +450,11 @@
                </article>
                <a href="#" class="about__link show-more-link">
                   Learn more about us
-                  <div class=" show-more-link__svg">
-                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                           d="M14.8677 8.83333L8.60966 2.57533L10.2593 0.925659L19.3337 9.99999L10.2593 19.0743L8.60966 17.4247L14.8677 11.1667H0.666992V8.83333H14.8677Z"
-                           fill="#6941C6" />
-                     </svg>
-                  </div>
+                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                     <path
+                        d="M14.8677 8.83333L8.60966 2.57533L10.2593 0.925659L19.3337 9.99999L10.2593 19.0743L8.60966 17.4247L14.8677 11.1667H0.666992V8.83333H14.8677Z"
+                        fill="#6941C6" />
+                  </svg>
                </a>
             </div>
          </section>
