--- a/src/index.html
+++ b/src/index.html
@@ -87,28 +87,31 @@
          <div class="stats">
             <div class="stats__container">
                <div class="stats__item">
-                  <img src="images/stats/review.svg" alt="expert reviews" class="stats__icon">
+                  <img src="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAgA0JaQAA3AA/vknQAA="
+                       data-src="images/stats/review.svg"
+                       alt="expert reviews"
+                       class="stats__icon lozad" width="48" height="48">
                   <div class="stats__info">
                      <span class="stats__value">100+</span>
                      <span class="stats__text">Expert reviews</span>
                   </div>
                </div>
                <div class="stats__item">
-                  <img src="images/stats/handshake.svg" alt="disputes solved" class="stats__icon">
+                  <img src="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAgA0JaQAA3AA/vknQAA=" data-src="images/stats/handshake.svg" alt="disputes solved" class="stats__icon lozad">
                   <div class="stats__info">
                      <span class="stats__value">400+</span>
                      <span class="stats__text">Disputes solved</span>
                   </div>
                </div>
                <div class="stats__item">
-                  <img src="images/stats/sand-watch.svg" alt="6 years of experience" class="stats__icon">
+                  <img src="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAgA0JaQAA3AA/vknQAA=" data-src="images/stats/sand-watch.svg" alt="6 years of experience" class="stats__icon lozad">
                   <div class="stats__info">
                      <span class="stats__value">6+</span>
                      <span class="stats__text">Years of experience</span>
                   </div>
                </div>
                <div class="stats__item">
-                  <img src="images/stats/comment.svg" alt="customer reviews" class="stats__icon">
+                  <img src="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAgA0JaQAA3AA/vknQAA=" data-src="images/stats/comment.svg" alt="customer reviews" class="stats__icon lozad">
                   <div class="stats__info">
                      <span class="stats__value">700+</span>
                      <span class="stats__text">Customer reviews</span>
