making it responsive

--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
                      </p>
                   </div>
                   <img src="images/hero/hero-img.png" alt="CEO photo" class="hero__img">
-                  <a href="#" class="hero__link">
+                  <a href="#categories" class="hero__link">
                      Discover services in categories
                      <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -88,30 +88,32 @@
             <div class="stats__container">
                <div class="stats__item">
                   <img src="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAgA0JaQAA3AA/vknQAA="
-                       data-src="images/stats/review.svg"
-                       alt="expert reviews"
-                       class="stats__icon lozad" width="48" height="48">
+                     data-src="images/stats/review.svg" alt="expert reviews" class="stats__icon lozad" width="48"
+                     height="48">
                   <div class="stats__info">
                      <span class="stats__value">100+</span>
                      <span class="stats__text">Expert reviews</span>
                   </div>
                </div>
                <div class="stats__item">
-                  <img src="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAgA0JaQAA3AA/vknQAA=" data-src="images/stats/handshake.svg" alt="disputes solved" class="stats__icon lozad">
+                  <img src="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAgA0JaQAA3AA/vknQAA="
+                     data-src="images/stats/handshake.svg" alt="disputes solved" class="stats__icon lozad">
                   <div class="stats__info">
                      <span class="stats__value">400+</span>
                      <span class="stats__text">Disputes solved</span>
                   </div>
                </div>
                <div class="stats__item">
-                  <img src="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAgA0JaQAA3AA/vknQAA=" data-src="images/stats/sand-watch.svg" alt="6 years of experience" class="stats__icon lozad">
+                  <img src="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAgA0JaQAA3AA/vknQAA="
+                     data-src="images/stats/sand-watch.svg" alt="6 years of experience" class="stats__icon lozad">
                   <div class="stats__info">
                      <span class="stats__value">6+</span>
                      <span class="stats__text">Years of experience</span>
                   </div>
                </div>
                <div class="stats__item">
-                  <img src="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAgA0JaQAA3AA/vknQAA=" data-src="images/stats/comment.svg" alt="customer reviews" class="stats__icon lozad">
+                  <img src="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAgA0JaQAA3AA/vknQAA="
+                     data-src="images/stats/comment.svg" alt="customer reviews" class="stats__icon lozad">
                   <div class="stats__info">
                      <span class="stats__value">700+</span>
                      <span class="stats__text">Customer reviews</span>
@@ -130,8 +132,10 @@
                         <article class="top-5__card card">
                            <div class="card__header">
                               <h3 class="card__title">PapersOwl.com</h3>
-                              <img src="images/top-5/papersowl-prev.png" alt="papersowl.com main page preview"
-                                 class="card__img">
+                              <img
+                                 src="data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAgA0JaQAA3AA/vknQAA="
+                                 data-src="images/top-5/papersowl-prev.png" alt="papersowl.com main page preview"
+                                 class="card__img lozad">
                            </div>
                            <div class="card__running-line">
                               <div class="card__running">
@@ -366,7 +370,7 @@
                </div>
             </div>
          </section>
-         <section class="categories">
+         <section class="categories" id="categories">
             <div class="categories__container">
                <h2 class="categories__title title">Writing services
                   <span class="title--text-violet">categories</span>
@@ -506,43 +510,50 @@
                      👋 Hi, nice to meet you. <span class="title--text-violet">I’m Monica Sunners</span> — creator & one
                      of those in charge of Papers Battle
                   </h3>
-                  <h4 class="about__subtitle">A few words about me</h4>
-                  <ul class="about__list list-about">
-                     <li class="list-about__item">
-                        <img src="images/about/degree.svg" alt="degree icon" class="list-about__icon">
-                        <span>Master’s Diploma</span>
-                        of the department of language and literature studies
-                     </li>
-                     <li class="list-about__item">
-                        <img src="images/about/languages.svg" alt="languages icon" class="list-about__icon">
-                        <span>6+ languages</span>
-                        I use in my everyday life, while communicating with friends, clients, solving my personal and
-                        business tasks
-                     </li>
-                     <li class="list-about__item">
-                        <img src="images/about/articles.svg" alt="articles icon" class="list-about__icon">
-                        <span>450+ essays, articles</span>
-                        and relevant staff were written by me
-                     </li>
-                     <li class="list-about__item">
-                        <img src="images/about/books.svg" alt="books icon" class="list-about__icon">
-                        <span>200+ books</span>
-                        have been read, great books lover and literature addicted
-                     </li>
-                  </ul>
-                  <div class="about__socials socials">
-                     <a href="#" class="socials__link-social">
-                        <img src="images/youtube.svg" alt="youtube link">
-                     </a>
-                     <a href="#" class="socials__link-social">
-                        <img src="images/facebook.svg" alt="facebook link">
-                     </a>
-                     <a href="#" class="socials__link-social">
-                        <img src="images/twitter.svg" alt="twitter link">
-                     </a>
+                  <div class="about__content">
+                     <div class="about__left">
+                        <h4 class="about__subtitle">A few words about me</h4>
+                        <ul class="about__list list-about">
+                           <li class="list-about__item">
+                              <img src="images/about/degree.svg" alt="degree icon" class="list-about__icon">
+                              <span>Master’s Diploma</span>
+                              of the department of language and literature studies
+                           </li>
+                           <li class="list-about__item">
+                              <img src="images/about/languages.svg" alt="languages icon" class="list-about__icon">
+                              <span>6+ languages</span>
+                              I use in my everyday life, while communicating with friends, clients, solving my personal
+                              and
+                              business tasks
+                           </li>
+                           <li class="list-about__item">
+                              <img src="images/about/articles.svg" alt="articles icon" class="list-about__icon">
+                              <span>450+ essays, articles</span>
+                              and relevant staff were written by me
+                           </li>
+                           <li class="list-about__item">
+                              <img src="images/about/books.svg" alt="books icon" class="list-about__icon">
+                              <span>200+ books</span>
+                              have been read, great books lover and literature addicted
+                           </li>
+                        </ul>
+                        <div class="about__socials socials">
+                           <a href="#" class="socials__link-social">
+                              <img src="images/youtube.svg" alt="youtube link">
+                           </a>
+                           <a href="#" class="socials__link-social">
+                              <img src="images/facebook.svg" alt="facebook link">
+                           </a>
+                           <a href="#" class="socials__link-social">
+                              <img src="images/twitter.svg" alt="twitter link">
+                           </a>
+                        </div>
+                     </div>
+                     <div class="about__img">
+                        <img src="images/about/monica.png"
+                           alt="photo of Monica Sunners, one of those who is in charge here" class="about__pic">
+                     </div>
                   </div>
-                  <img src="images/about/monica.png" alt="photo of Monica Sunners, one of those who is in charge here"
-                     class="about__pic">
                </article>
                <a href="#" class="about__link show-more-link">
                   Learn more about us
