--- a/src/index.html
+++ b/src/index.html
@@ -1148,8 +1148,8 @@
                   About tips & tricks on how to write the best papers for educational, business and everyday life needs
                </p>
                <form class="subscribe__form">
-                  <input type="email" name="email" id="email" placeholder="Your email" class="subscribe__email">
-                  <button type="button" class="subscribe__btn">Subscribe
+                  <input required type="email" name="email" id="email" placeholder="Your email" class="subscribe__email">
+                  <button class="subscribe__btn">Subscribe
                      <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                            d="M11.6669 17.7006L22.3909 6.97546L24.0417 8.62513L11.6669 21L4.24219 13.5753L5.89185 11.9256L11.6669 17.7006Z"
@@ -1162,7 +1162,7 @@
                   <div class="modal__content">
                      <h3 class="modal__title">Thanks for subscription!</h3>
                      <p class="modal__text">
-                        Your email monicaSunners@gemail.com has been subscribed to our mailing list
+                        Your email <span>monicaSunners@gemail.com</span> has been subscribed to our mailing list
                      </p>
                      <button class="modal__close-btn">Ok, cool</button>
                   </div>
